# Learning_Value_Function_Manifold

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 3d_collision_avoidance.ipynb  air3d.ipynb  data_gen.ipynb  data_physics.ipynb  data_physics_frozen-Copy1.ipynb  data_physics_frozen.ipynb  physics.ipynb
notebooks/lightning_logs/version_0/: events.out.tfevents.1770238697.thomas-Lambda-Vector.1620864.0
notebooks/lightning_logs/version_1/: events.out.tfevents.1770238864.thomas-Lambda-Vector.1620864.1
notebooks/lightning_logs/version_2/: events.out.tfevents.1770239028.thomas-Lambda-Vector.1620864.2
notebooks/lightning_logs/version_3/: events.out.tfevents.1770239142.thomas-Lambda-Vector.1620864.3
notebooks/lightning_logs/version_4/: events.out.tfevents.1770239166.thomas-Lambda-Vector.1655076.0
notebooks/lightning_logs/version_5/: events.out.tfevents.1770239184.thomas-Lambda-Vector.1655076.1  events.out.tfevents.1770239257.thomas-Lambda-Vector.1655076.2
notebooks/lightning_logs/version_5/checkpoints/: epoch=0-step=45.ckpt
notebooks/lightning_logs/version_6/: events.out.tfevents.1770239441.thomas-Lambda-Vector.1655076.3
notebooks/lightning_logs/version_7/: events.out.tfevents.1770239579.thomas-Lambda-Vector.1655076.4
scripts/: Air3Dtraining.py  training.py
scripts/configs/: Air3D-1.yaml  Air3D.yaml  Air3D_higher_latent.yaml  Air3D_siren.yaml  dual_frozen.yaml  dual_unfrozen.yaml  physics.yaml
src/lvfm/: __init__.py  callbacks.py  data_generation.py  datasets.py  functions.py  losses.py  models.py  plotting.py  transforms.py
(+2 files in other folders)
