[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learning_value_function_manifold"
version = "0.0.1"
authors = [
  {name="Kendra Givens", email="kendralee157@gmail.com"},
]
description = "Learning low dimensional value function"

readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "lightning[pytorch-extra] >= 2.4.0",
  "torch >= 2.5.0"
]

[project.urls]
"Homepage" = "https://github.com/KendraGivens/Learning_Value_Function_Manifold"
"Bug Tracker" = "https://github.com/KendraGivens/Learning_Value_Function_Manifold/issues"

[tool.ruff]
line-length = 100